feat(tests): run tests suite in docker compose with mock server

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,4 @@ test:
   services:
     - docker:dind
   script:
-    - docker build .
+    - docker-compose up --build --abort-on-container-exit --exit-code-from tests
