--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 test:
-  image: docker/compose:1.24.0
+  image:
+    name: docker/compose:1.24.0
+    entrypoint: ["/bin/sh", "-c"]
   services:
     - docker:dind
   script:
