--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,9 @@
+stages:
+  - test
+  - release
+
 test:
+  stage: test
   image:
     name: docker/compose:1.24.0
     entrypoint: ["/bin/sh", "-c"]
@@ -6,3 +11,13 @@ test:
     - docker:dind
   script:
     - docker-compose up --build --abort-on-container-exit --exit-code-from tests
+
+semantic-release:
+  stage: release
+  image: enix/semantic-release:gitlab
+  script:
+    - npx semantic-release --ci
+  only:
+    - master
+  except:
+    - tags
