--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,5 +1,6 @@
 plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
+  - '@semantic-release/github'
   - - '@semantic-release/gitlab'
     - gitlabUrl: https://gitlab.enix.io
