test(ci): update docker-compose for CI testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,13 @@ version: '3'
 
 services:
   mock:
-    build: mock
+    image: dothill-api-go-tests
+    build: .
+    command: ./mock
 
   tests:
-    build: .
+    image: dothill-api-go-tests
     environment:
-      API_ENDPOINT: http://mock:8080
+      TEST_STORAGEIP: http://mock:8080
     depends_on:
       - mock
