test: test against the mock server by default

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #
-# Local testing parameters - replace <variables> with correct values, do not commit!
+# Local testing parameters - replace variables with correct values, do not commit!
 #
-TEST_STORAGEIP=<http://ipaddress>
-TEST_USERNAME=<username>
-TEST_PASSWORD=<password>
+TEST_STORAGEIP=http://localhost:8080
+TEST_USERNAME=mock
+TEST_PASSWORD=password
